// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem Component should checkbox and text be checked and empty 1`] = `
<li
  className="sc-ifAKCX jsMcJN"
>
  <button
    checked={true}
    className="sc-EHOje cYIXJ"
    onClick={[Function]}
  />
  <span
    checked={true}
    className="sc-bxivhb ebQrUA"
  >
    
  </span>
  <button
    className="sc-bZQynM gazlcN"
    onClick={[Function]}
  >
    X
  </button>
</li>
`;

exports[`ListItem Component should checkbox and text be checked and not empty 1`] = `
<li
  className="sc-ifAKCX jsMcJN"
>
  <button
    checked={true}
    className="sc-EHOje cYIXJ"
    onClick={[Function]}
  />
  <span
    checked={true}
    className="sc-bxivhb ebQrUA"
  >
    some text
  </span>
  <button
    className="sc-bZQynM gazlcN"
    onClick={[Function]}
  >
    X
  </button>
</li>
`;

exports[`ListItem Component should checkbox and text be unchecked and empty 1`] = `
<li
  className="sc-ifAKCX jsMcJN"
>
  <button
    checked={false}
    className="sc-EHOje fdMPqF"
    onClick={[Function]}
  />
  <span
    checked={false}
    className="sc-bxivhb btjxdt"
  >
    
  </span>
  <button
    className="sc-bZQynM gazlcN"
    onClick={[Function]}
  >
    X
  </button>
</li>
`;

exports[`ListItem Component should checkbox and text be unchecked and not empty 1`] = `
<li
  className="sc-ifAKCX jsMcJN"
>
  <button
    checked={false}
    className="sc-EHOje fdMPqF"
    onClick={[Function]}
  />
  <span
    checked={false}
    className="sc-bxivhb btjxdt"
  >
    some text
  </span>
  <button
    className="sc-bZQynM gazlcN"
    onClick={[Function]}
  >
    X
  </button>
</li>
`;
